--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Web Profil Desa Pagar Besi, Kec. Merigi Sakti, Kab. Bengkulu Tengah, Indonesia">
+    <meta name="description" content="Web Profil Desa Cirebon Baru, Kec. Seberang Musi, Kab. Kepahiang, Indonesia">
     <meta name="author" content="M. Raka Maulana A.">
 
     <title>Desaku - Cirebon Baru</title>
