--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
       </div>
     </header>
 
-    <!-- Sejarah Desa Pagar Besi -->
+    <!-- Sejarah Desa -->
     <section id="about">
       <div class="container">
         <div class="row">
@@ -102,7 +102,7 @@
       </div>
     </section>
 
-    <!-- Profil Desa Pagar Besi -->
+    <!-- Profil Desa -->
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
