--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Web Profil Desa Cirebon Baru, Kec. Seberang Musi, Kab. Kepahiang, Indonesia">
-    <meta name="author" content="M. Raka Maulana A.">
+    <meta name="author" content="BerlianTS">
 
     <title>Desaku - Cirebon Baru</title>
     
