--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Sejarah</h2>
-            <h3 class="section-subheading text-muted">Desa Cirebon Baru, Kec. Seberang Musing, Kab. Kepahiang</h3>
+            <h3 class="section-subheading text-muted">Desa Cirebon Baru, Kec. Seberang Musi, Kab. Kepahiang</h3>
           </div>
         </div>
         <div class="row">
